# GifTool

./: README.md  pyproject.toml
gif_tool/: __init__.py  cli.py  converter.py
